# PortfolioOptimizer

./: PROJECT_STRUCTURE.md  Quantitative Portfolio Optimization Metrics.md  README.md  pyproject.toml  walkthrough.md
config/: default_config.yaml
dashboard/: app.py  style.css
dashboard/components/: factor_analysis.py  metrics_display.py  portfolio_viz.py  risk_analysis.py
dashboard/pages/: 01_Data_Ingestion.py  02_Analytics.py  03_Optimization.py  04_Backtesting.py
dashboard/utils/: state_management.py
portfolio_optimizer/analytics/: __init__.py  annuities.py  factor_models.py  fixed_income.py  risk_metrics.py  sector_analysis.py  tail_risk.py
portfolio_optimizer/data/: cache.py  ingestion.py  validators.py
portfolio_optimizer/models/: asset.py  optimization_result.py  portfolio.py
portfolio_optimizer/modules/: analytics.py  ingestion.py
portfolio_optimizer/optimization/: __init__.py  base_optimizer.py  black_litterman.py  constraints.py  hierarchical.py  kelly_criterion.py  shortfall_minimization.py  traditional.py
portfolio_optimizer/utils/: constants.py  helpers.py
scripts/: run_verification.py
tests/unit/: test_analytics.py  test_optimization.py
