[project]
name = "investmentportfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "financetoolkit>=2.0.7",
    "fredapi>=0.5.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "polars>=1.40.1",
    "riskfolio-lib>=7.2.1",
    "statsmodels>=0.14.6",
    "streamlit>=1.57.0",
    "yfinance>=1.3.0",
]
